--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
 }
 
 .card-collection {
@@ -13,4 +20,10 @@ body {
 
 h1, h2, h3, h4, h5, p {
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .card-collection {
+        grid-template-columns: 1fr;
+    }
 }
